Fix queue overflow

--- a/SCSS/Modern Dark Theme.scss
+++ b/SCSS/Modern Dark Theme.scss
@@ -690,52 +690,65 @@
 					}
 				// SRS Content
 					.spacedRepetition {
-						> div {
-							.spacedRepetitionContent {
-								height: 90%;
-							}
-						}
-					}
-					.spaced-repetition__bottom {
-						.spaced-repetition__accuracy-buttons {
-							.accuracy-button {
-					
-								&:hover {
-									filter: brightness(110%);
+						// Content
+							> div {
+								.spacedRepetitionContent {
+									height: 90%;
+									// Prompt
+										// .spaced-repetition__prompt {
+
+										// }
+									// Answer
+										.spacedRepetitionAnswer {
+											#hierarchy-editor {
+												> div {
+													.tree-node-container {
+														margin-right: 0.7rem;
+													}
+												}
+											}
+										}
 								}
-								.accuracy-button__label {
-									font-weight: 600;
+							}
+						// Bottom
+							.spaced-repetition__bottom {
+								.spaced-repetition__accuracy-buttons {
+									.accuracy-button {
+							
+										&:hover {
+											filter: brightness(110%);
+										}
+							
+										.accuracy-button__label {
+											font-weight: 600;
+										}
+							
+										// .accuracy-button__interval {
+							
+										// }
+									}
+									// Too Soon
+										.accuracy-button:nth-of-type(1) {
+											background-color: var(--queue-bncolor-toosoon);
+										}
+									// Forgotten
+										.accuracy-button:nth-of-type(2) {
+											background-color: var(--queue-bncolor-hard);
+										}
+									// Partially Recalled
+										.accuracy-button:nth-of-type(3) {
+											background-color: var(--queue-bncolor-partial);
+										}
+									// Recalled with effort
+										.accuracy-button:nth-of-type(4) {
+											background-color: var(--queue-bncolor-done);
+										}
+									// Immediately
+										.accuracy-button:nth-of-type(5) {
+											background-color: var(--queue-bncolor-easy);
+										}
 								}
-								// .accuracy-button__interval {
-									
-								// }
 							}
-					
-							// Too Soon
-							.accuracy-button:nth-of-type(1) {
-								background-color: var(--queue-bncolor-toosoon);
-							}
-					
-							// Forgotten
-							.accuracy-button:nth-of-type(2) {
-								background-color: var(--queue-bncolor-hard);
-							}
-					
-							// Partially Recalled
-							.accuracy-button:nth-of-type(3) {
-								background-color: var(--queue-bncolor-partial);
-							}
-					
-							// Recalled with effort
-							.accuracy-button:nth-of-type(4) {
-								background-color: var(--queue-bncolor-done);
-							}
-					
-							// Immediately
-							.accuracy-button:nth-of-type(5) {
-								background-color: var(--queue-bncolor-easy);
-							}
-						}
 					}
 			}
 		}
